# ai-patch-verifier

./: .gitignore  .ruff.toml  LICENSE  README.md  SECURITY.md  pyproject.toml  readme_donations_patch_in_place.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
src/ai_patch_verifier/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core_more.py  test_headers_nested.py  test_sanity.py  test_score_edges.py
